[metadata]
name = icm
description = "Decomposes Cirq Circuits into ICM Form"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/QSI-BAQS/icm
author = "Madhav Khrishnan, Athena Caesura"
author_email = "MadhavKrishnan.Vijayan@uts.edu.au, athena.caesura@zapatacomputing.com"
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src

install_requires =
    cirq>=0.13.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    black~=22.3
    flake8~=3.9.0
    isort~=5.9.0
    mypy~=0.910
    pytest~=6.2
    pytest-cov>=2.12
    pre-commit~=2.19
    commitizen~=2.27

[flake8]
ignore = E203,E266,F401,W605
max-line-length = 88
